--- a/cfg/stripper/maps/dprm3_sugarmill_b.cfg
+++ b/cfg/stripper/maps/dprm3_sugarmill_b.cfg
@@ -3,36 +3,6 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
-; --- How the event works:
-; --- Director calls ForcePanicEvent when event first triggered
-; --- Then each generator button pressed spawns common via `c14m1_mob.nut`, which spawns a "mob" with a limited size defined by the script
-; --- On the last button press, `c14_junkyard_crane.nut` is called while the crane is being lifted
-; --- Once the crane is fully lifted and it starts rotating `c14_junkyard_cooldown.nut` is called
-; --- When the button to release the container is pressed, `c14m1_mob.nut` is called and the event ends
-
-; --- Remove horde while crane is lifting the container
-modify:
-{
-	match:
-	{
-		"targetname" "generator_panic_case"
-	}
-	delete:
-	{
-		"OnCase04" "directorBeginScriptc14_junkyard_crane3-1"
-	}
-}
-; --- Remove panic event when starting event
-{
-	match:
-	{
-		"targetname" "fuel_button"
-	}
-	delete:
-	{
-		"OnPressed" "directorForcePanicEvent2-1"
-	}
-}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -46,31 +16,25 @@ modify:
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
 add:
-; --- Ammo pile by the police car outside saferoom
+; --- Ammo pile in the train yard
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "-4368 -7592 -255"
-	"angles" "0 45 0"
+	"origin" "455 -11656 198"
+	"angles" "0 0 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
-	"count" "5"
 }
-; --- Make ammo pile in shipping container after the car shop always spawn
+; --- Ammo pile in the office by the silos
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "-1822.8 -1231.8 -35.2955"
-	"angles" "0 285 0"
+	"origin" "-1005 -7913 111"
+	"angles" "0 0 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
-	"count" "5"
-}
-filter:
-{
-	"hammerid" "2984159"
 }
 
 ; =====================================================
@@ -84,51 +48,23 @@ filter:
 ; ==                 EXPLOITS BLOCKED                ==
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
-; --- Failsafe to prevent survivor progress being completely stopped by tank punches causing container to disappear
-modify:
-{
-	match:
-	{
-		"damagefilter" "filter_container"
-	}
-	insert:
-	{
-		"targetname" "container_break_props"
-		"OnUser1" "container_fake_failsafe,Enable,,0,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "drop_button"
-	}
-	insert:
-	{
-		"OnPressed" "container_break_props,Break,,4,-1"
-		"OnPressed" "container_break_props,FireUser1,,3.5,-1"
-	}
-}
-; --- Spawn a visible container if tank punched it (Very unlikely to be punched while suspended in the air, which can cause the softlock)
-{
-	match:
-	{
-		"targetname" "container_phys_drop"
-	}
-	insert:
-	{
-		"OnHitByTank" "container_fake_failsafe,Enable,,61,-1"
-	}
-}
 add:
+; --- Block jumping on gas station roof
 {
-	"classname" "prop_dynamic_override"
-	"origin" "-4130 2202 -1"
-	"angles" "18.75 0 0"
-	"model" "models/props_equipment/cargo_container04_phys.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-	"StartDisabled" "1"
-	"targetname" "container_fake_failsafe"
+	"classname" "env_physics_blocker"
+	"origin" "-1593 -13616 894"
+	"mins" "-330 -228 -580"
+	"maxs" "330 228 580"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1761 -13422 894"
+	"mins" "-354 -162 -580"
+	"maxs" "354 162 580"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 
 ; =====================================================
@@ -145,6 +81,52 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+add:
+; --- Fix non-solid trees by the silos
+{
+	"classname" "prop_dynamic"
+	"origin" "-1237 -7354 97"
+	"angles" "0 220 0"
+	"model" "models/props_foliage/urban_tree_giant01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "355 -8630 97"
+	"angles" "0 213.5 0"
+	"model" "models/props_foliage/urban_tree_giant01_small.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+; --- Block jumping onto one of the trees
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1068 -7395 1273"
+	"mins" "-35 -35 -841"
+	"maxs" "35 35 841"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Clipping between truck and roof by the silos
+{
+	"classname" "env_physics_blocker"
+	"origin" "280 -8192 267"
+	"mins" "-3 -51 -5"
+	"maxs" "3 51 5"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "286 -8192 276"
+	"mins" "-3 -51 -4"
+	"maxs" "3 51 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
@@ -181,96 +163,6 @@ add:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
-; --- Reduce the damage of the fire by the crashed plane
-modify:
-{
-	match:
-	{
-		"hammerid" "7278727"
-		"origin" "-5738.33 5126.61 287"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278716"
-		"origin" "-6478 5846.12 508"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278703"
-		"origin" "-6321 6056.5 420"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278685"
-		"origin" "-5772 6188 384"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7765073"
-		"origin" "-5499 6305 517.5"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7765083"
-		"origin" "-5252 6412 276"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278740"
-		"origin" "-5225.03 5380.72 318.06"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "3905185"
-		"origin" "-4665 6606 90"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
@@ -279,24 +171,103 @@ modify:
 ; ==              Add or change ladders              ==
 ; =====================================================
 add:
-; --- Survivor ladder at the house one-way drop
+; --- Infected ladder to get on the sugarmill saferoom roof (newest version only)
 {
 	"classname" "func_simpleladder"
-	"origin" "1413 -3906.8 -357"
-	"angles" "0 0 6.5"
-	"model" "*18"
-	"normal.x" "0.00"
-	"normal.y" "1.00"
-	"normal.z" "0.11"
-	"team" "0"
+	"origin" "3562 8946 -37"
+	"angles" "0 0 0"
+	"model" "*176"
+	"normal.x" "-0.89"
+	"normal.y" "0.00"
+	"normal.z" "-0.44"
+	"team" "2"
+}
+; --- Infected ladder to get on the awning in the construction site (newest version only)
+{
+	"classname" "func_simpleladder"
+	"origin" "341.87 -8565.88 11"
+	"angles" "0 90 0"
+	"model" "*272"
+	"normal.x" "-0.89"
+	"normal.y" "0.00"
+	"normal.z" "-0.44"
+	"team" "2"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "-1103 -4650 -243"
-	"angles" "6.5 270 0"
-	"model" "models/props/de_train/ladderaluminium.mdl"
-	"solid" "0"
-	"disableshadows" "1"
+	"classname" "func_simpleladder"
+	"origin" "341.87 -8565.88 11"
+	"angles" "0 90 0"
+	"model" "*273"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on the generator room roof (newest version only)
+{
+	"classname" "func_simpleladder"
+	"origin" "-1721 1242 41"
+	"angles" "0 0 0"
+	"model" "*63"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on the pipe outside the generator room (newest version only)
+{
+	"classname" "func_simpleladder"
+	"origin" "3668 -8701 16"
+	"angles" "0 180 0"
+	"model" "*53"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on the larger slanted roof by the silos (newest version only)
+{
+	"classname" "func_simpleladder"
+	"origin" "-438 -1006 -4"
+	"angles" "0 0 0"
+	"model" "*228"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on the bridge by the bricks (newest version only)
+{
+	"classname" "func_simpleladder"
+	"origin" "10407 -7709 24"
+	"angles" "0 270 0"
+	"model" "*271"
+	"normal.x" "0.89"
+	"normal.y" "0.00"
+	"normal.z" "-0.44"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "10407 -7709 24"
+	"angles" "0 270 0"
+	"model" "*270"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Fix a badly placed ladder by the office in the mill (all versions)
+modify:
+{
+	match:
+	{
+		"hammerid" "3484921"
+	}
+	insert:
+	{
+		"origin" "2 0 3"
+	}
 }
 
 
