--- a/cfg/stripper/maps/dprm4_milltown_b.cfg
+++ b/cfg/stripper/maps/dprm4_milltown_b.cfg
@@ -3,36 +3,6 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
-; --- How the event works:
-; --- Director calls ForcePanicEvent when event first triggered
-; --- Then each generator button pressed spawns common via `c14m1_mob.nut`, which spawns a "mob" with a limited size defined by the script
-; --- On the last button press, `c14_junkyard_crane.nut` is called while the crane is being lifted
-; --- Once the crane is fully lifted and it starts rotating `c14_junkyard_cooldown.nut` is called
-; --- When the button to release the container is pressed, `c14m1_mob.nut` is called and the event ends
-
-; --- Remove horde while crane is lifting the container
-modify:
-{
-	match:
-	{
-		"targetname" "generator_panic_case"
-	}
-	delete:
-	{
-		"OnCase04" "directorBeginScriptc14_junkyard_crane3-1"
-	}
-}
-; --- Remove panic event when starting event
-{
-	match:
-	{
-		"targetname" "fuel_button"
-	}
-	delete:
-	{
-		"OnPressed" "directorForcePanicEvent2-1"
-	}
-}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -45,33 +15,6 @@ modify:
 ; ==                STATIC AMMO PILES                ==
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
-add:
-; --- Ammo pile by the police car outside saferoom
-{
-	"classname" "weapon_ammo_spawn"
-	"origin" "-4368 -7592 -255"
-	"angles" "0 45 0"
-	"model" "models/props/terror/ammo_stack.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "5"
-}
-; --- Make ammo pile in shipping container after the car shop always spawn
-{
-	"classname" "weapon_ammo_spawn"
-	"origin" "-1822.8 -1231.8 -35.2955"
-	"angles" "0 285 0"
-	"model" "models/props/terror/ammo_stack.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "5"
-}
-filter:
-{
-	"hammerid" "2984159"
-}
 
 ; =====================================================
 ; ==                 HITTABLE CHANGES                ==
@@ -84,51 +27,23 @@ filter:
 ; ==                 EXPLOITS BLOCKED                ==
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
-; --- Failsafe to prevent survivor progress being completely stopped by tank punches causing container to disappear
-modify:
-{
-	match:
-	{
-		"damagefilter" "filter_container"
-	}
-	insert:
-	{
-		"targetname" "container_break_props"
-		"OnUser1" "container_fake_failsafe,Enable,,0,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "drop_button"
-	}
-	insert:
-	{
-		"OnPressed" "container_break_props,Break,,4,-1"
-		"OnPressed" "container_break_props,FireUser1,,3.5,-1"
-	}
-}
-; --- Spawn a visible container if tank punched it (Very unlikely to be punched while suspended in the air, which can cause the softlock)
-{
-	match:
-	{
-		"targetname" "container_phys_drop"
-	}
-	insert:
-	{
-		"OnHitByTank" "container_fake_failsafe,Enable,,61,-1"
-	}
-}
 add:
+; --- Block survivors from jumping on house by the playground
 {
-	"classname" "prop_dynamic_override"
-	"origin" "-4130 2202 -1"
-	"angles" "18.75 0 0"
-	"model" "models/props_equipment/cargo_container04_phys.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-	"StartDisabled" "1"
-	"targetname" "container_fake_failsafe"
+	"classname" "env_physics_blocker"
+	"origin" "-1473 7605 958"
+	"mins" "-176 -376 -626"
+	"maxs" "176 376 626"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1817 7805 958"
+	"mins" "-168 -176 -626"
+	"maxs" "168 176 626"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 
 ; =====================================================
@@ -181,96 +96,6 @@ add:
 ; ==              TRIGGER REMOVAL / FIX              ==
 ; ==    Fix triggers that interfere with gameplay    ==
 ; =====================================================
-; --- Reduce the damage of the fire by the crashed plane
-modify:
-{
-	match:
-	{
-		"hammerid" "7278727"
-		"origin" "-5738.33 5126.61 287"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278716"
-		"origin" "-6478 5846.12 508"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278703"
-		"origin" "-6321 6056.5 420"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278685"
-		"origin" "-5772 6188 384"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7765073"
-		"origin" "-5499 6305 517.5"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7765083"
-		"origin" "-5252 6412 276"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "7278740"
-		"origin" "-5225.03 5380.72 318.06"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
-{
-	match:
-	{
-		"hammerid" "3905185"
-		"origin" "-4665 6606 90"
-	}
-	insert:
-	{
-		"damage" "4"
-	}
-}
 
 
 ; #############  LADDER CHANGES AND FIXES  ############
@@ -278,25 +103,106 @@ modify:
 ; ==             LADDER ADDITIONS / FIXES            ==
 ; ==              Add or change ladders              ==
 ; =====================================================
-add:
-; --- Survivor ladder at the house one-way drop
+modify:
+; --- Fix broken ladder on broken fence after the burger tank (newest version)
 {
-	"classname" "func_simpleladder"
-	"origin" "1413 -3906.8 -357"
-	"angles" "0 0 6.5"
-	"model" "*18"
-	"normal.x" "0.00"
-	"normal.y" "1.00"
-	"normal.z" "0.11"
-	"team" "0"
+	match:
+	{
+		"hammerid" "1639791"
+	}
+	insert:
+	{
+		"origin" "0 4 0"
+	}
+}
+; --- Fix broken ladders on house by the playground (newest version)
+{
+	match:
+	{
+		"hammerid" "2591916"
+	}
+	insert:
+	{
+		"origin" "0 1 0"
+	}
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "-1103 -4650 -243"
-	"angles" "6.5 270 0"
-	"model" "models/props/de_train/ladderaluminium.mdl"
-	"solid" "0"
-	"disableshadows" "1"
+	match:
+	{
+		"hammerid" "2591878"
+	}
+	insert:
+	{
+		"origin" "0 -1 0"
+	}
+}
+; --- Fix broken ladders on house by the playground (old version)
+; --- Move ladder to a different spot due to badly placed clip brush
+{
+	match:
+	{
+		"hammerid" "8007823"
+	}
+	insert:
+	{
+		"origin" "-70 0 0"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "8007814"
+	}
+	insert:
+	{
+		"origin" "0 -1 0"
+	}
+}
+; --- Fix broken ladder by garage sale (newest version)
+{
+	match:
+	{
+		"hammerid" "4273049"
+	}
+	insert:
+	{
+		"origin" "1 0 0"
+	}
+}
+; --- Fix broken infected ladder by the one-way drop house (old version) (credit: Wicket)
+add:
+{
+	"classname" "func_simpleladder"
+	"origin" "9905.00 2248.00 -88.00"
+	"angles" "0.00 90.00 0.00"
+	"model" "*64"
+	"normal.x" "0.86"
+	"normal.y" "0.00"
+	"normal.z" "-0.50"
+	"team" "2"
+	"rendermode" "10" ; --- On newest this is visible in an incorrect spot so hide it
+}
+; --- Infected ladder to climb on the house by the flower garden (newest version only)
+{
+	"classname" "func_simpleladder"
+	"origin" "1142 58 213"
+	"angles" "0 0 0"
+	"model" "*148"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on the sugarmill saferoom roof (newest version only)
+{
+	"classname" "func_simpleladder"
+	"origin" "-1712 -1870 -28"
+	"angles" "0 270 0"
+	"model" "*92"
+	"normal.x" "0.89"
+	"normal.y" "0.00"
+	"normal.z" "-0.44"
+	"team" "2"
 }
 
 
