--- a/cfg/cfgogl/spit_block.cfg
+++ b/cfg/cfgogl/spit_block.cfg
@@ -10,8 +10,8 @@ spit_block_square l4d_dbd2dc_undead_center -6902.102539 8809.659180 -7872.751953
 spit_block_square l4d2_fallindeath03 4562.987793 -1769.313721 4446.680664 -1623.422729
 spit_block_square l4d2_fallindeath04 1656.737061 -325.227692 1531.636108 -187.895630
 spit_block_square cdta_03warehouse 6311.086 -13217.889 6192.448 -13347.204 // At the final ladder in the sewer
-spit_block_square downpour_sugarmill_a -1444.891235 -9514.031250 -1514.214478 -9575.968750
-spit_block_square downpour_sugarmill_b -1434.379028 -9517.581055 -1514.214478 -9575.968750
+spit_block_square downpour_sugarmill_a -1444.891235 -9514.031250 -1514.214478 -9575.968750 // Redundant, for much older version of Downpour
+spit_block_square downpour_sugarmill_b -1434.379028 -9517.581055 -1514.214478 -9575.968750 // Redundant, for much older version of Downpour
 spit_block_square l4d2_darkblood02_engine 2515 5610 2664 5770
 spit_block_square x1m2_path 6303 10742 6522 10893
 spit_block_square cotd03_mall 8713 3405 8890 3115
