c7m1: Compensate the spawn delay of tank frustration

--- a/cfg/stripper/maps/c7m1_docks.cfg
+++ b/cfg/stripper/maps/c7m1_docks.cfg
@@ -88,6 +88,22 @@ modify:
 		"OnTimeUp" "tankdoorout_button,Kill,,20.5,-1"
 	}
 }
+; --- Compensate the spawn delay of tank frustration
+modify:
+{
+	match:
+	{
+		"targetname" "tankdoorin_button"
+	}
+	delete:
+	{
+		"OnTimeUp" "directorEnableTankFrustration0-1"
+	}
+	insert:
+	{
+		"OnTimeUp" "director,BeginScript,c7m1_traintank_frustr,0,-1"
+	}
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
