c8m3 further spawn tweaks

--- a/cfg/stripper/maps/c8m3_sewers.cfg
+++ b/cfg/stripper/maps/c8m3_sewers.cfg
@@ -46,8 +46,8 @@ add:
 }
 {
 	"classname" "script_nav_attribute_region"
-	"origin" "11968 6556 116"
-	"extent" "960 804 156"
+	"origin" "12080 6556 116"
+	"extent" "1072 804 156"
 	"spawnflags" "256"
 	"targetname" "remove_battlefield_areas"
 	"remove_attributes" "1"
@@ -72,6 +72,22 @@ add:
 	"classname" "script_nav_attribute_region"
 	"origin" "12160 5276 92"
 	"extent" "512 476 132"
+	"spawnflags" "256"
+	"targetname" "remove_battlefield_areas"
+	"remove_attributes" "1"
+}
+{
+	"classname" "script_nav_attribute_region"
+	"origin" "11856 7936 536"
+	"extent" "848 408 104"
+	"spawnflags" "256"
+	"targetname" "remove_battlefield_areas"
+	"remove_attributes" "1"
+}
+{
+	"classname" "script_nav_attribute_region"
+	"origin" "12928 6296 384"
+	"extent" "224 392 64"
 	"spawnflags" "256"
 	"targetname" "remove_battlefield_areas"
 	"remove_attributes" "1"
