Downpour 4: Fix saferoom door

--- a/cfg/stripper/maps/dprm4_milltown_b.cfg
+++ b/cfg/stripper/maps/dprm4_milltown_b.cfg
@@ -60,6 +60,19 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+; --- Fix starting saferoom using the wrong door model (doesn't spawn the crossbar)
+modify:
+{
+	match:
+	{
+		"hammerid" "54614"
+	}
+	replace:
+	{
+		"model" "models/props_doors/checkpoint_door_01.mdl"
+		"spawnpos" "0"
+	}
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
