--- a/cfg/stripper/maps/c6m1_riverbank.cfg
+++ b/cfg/stripper/maps/c6m1_riverbank.cfg
@@ -125,17 +125,6 @@ modify:
 	match:
 	{
 		"targetname" "caralarm_4-caralarm_light1"
-		"origin" "3422.15 2843.06 69.031"
-	}
-	replace:
-	{
-		"origin" "3438.15 2843.06 73.031"
-	}
-}
-{
-	match:
-	{
-		"targetname" "caralarm_4-caralarm_light1"
 		"origin" "3474.17 2786.3 69"
 	}
 	replace:
@@ -652,12 +641,37 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+{
+	"classname" "env_physics_blocker"
+	"origin" "2711 2850 112"
+	"mins" "-31 -2 -50"
+	"maxs" "31 2 50"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "2708 2740 112"
+	"mins" "-28 -2 -50"
+	"maxs" "28 2 50"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block survivors from climbing the scaffolding by the souvenirs store
 {
 	"classname" "env_physics_blocker"
 	"origin" "2676 2628 1653"
 	"mins" "-158 -47 -1443"
 	"maxs" "158 47 1443"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from climbing up the displacement in the alleyway by the alarm car
+{
+	"classname" "env_physics_blocker"
+	"origin" "1898 1283 273"
+	"mins" "-58 -6 -81"
+	"maxs" "58 6 81"
 	"initialstate" "1"
 	"BlockType" "1"
 }
