--- a/cfg/stripper/maps/dprm4_milltown_b.cfg
+++ b/cfg/stripper/maps/dprm4_milltown_b.cfg
@@ -60,7 +60,7 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
-; --- Fix starting saferoom using the wrong door model (doesn't spawn the crossbar)
+; --- Fix starting saferoom using the wrong door model
 modify:
 {
 	match:
@@ -72,6 +72,17 @@ modify:
 		"model" "models/props_doors/checkpoint_door_01.mdl"
 		"spawnpos" "0"
 		"body" "1"
+	}
+}
+modify:
+{
+	match:
+	{
+		"targetname" "checkpoint_entrance"
+	}
+	delete:
+	{
+		"targetname" "checkpoint_entrance"
 	}
 }
 
