Upload uncommitted changes

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -3268,6 +3268,7 @@ modify:
 	{
 		"classname" "/.*prop_physics.*/"
 		"model" "models/props_interiors/alarm_clock.mdl"
+		"spawnflags" "256"
 	}
 	insert:
 	{
