--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -3,18 +3,22 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
-; --- Allow Midnight Riders bus event to happen in versus
-;modify:
-;{
-;	match:
-;	{
-;		"hammerid" "556544"
-;	}
-;	insert:
-;	{
-;		"OnVersusPostIO" "trigger_busEnable0-1"
-;	}
-;}
+; --- Load a modified version of the event script
+modify:
+{
+	match:
+	{
+		"targetname" "relay_minifinale"
+	}
+	delete:
+	{
+		"OnTrigger" "directorBeginScriptc6m2_minifinale0-1"
+	}
+	insert:
+	{
+		"OnTrigger" "directorBeginScriptc6m2_minifinale_rework0-1"
+	}
+}
 ; --- Add obscured (blue) nav area around the edge of the room where survivors drop into the sewer, so SI and horde can spawn
 add:
 {
@@ -285,6 +289,16 @@ add:
 {
 	"classname" "weapon_ammo_spawn"
 	"origin" "1183 568 18"
+	"angles" "0 90 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+}
+; --- Ammo pile by the cement truck
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "142 1329 -64"
 	"angles" "0 90 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
@@ -619,11 +633,19 @@ add:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
-; --- Additional upturned pool table in the pool room
+; --- Extra upturned pool tables in the pool room
 {
 	"classname" "prop_dynamic"
 	"origin" "1345 723 8"
 	"angles" "75 155 0"
+	"model" "models/props_downtown/pooltable.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "847 1084 8"
+	"angles" "75 335.5 0"
 	"model" "models/props_downtown/pooltable.mdl"
 	"solid" "6"
 	"disableshadows" "1"
@@ -637,6 +659,23 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Bricks to climb into the pool room from the construction site
+{
+	"classname" "prop_dynamic"
+	"origin" "1265 1356 -77"
+	"angles" "4.24909 94.4899 0.00738525"
+	"model" "models/props_highway/plywood_01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1242 1301 -72"
+	"angles" "-0.370436 359.396 -4.23301"
+	"model" "models/props/de_nuke/cinderblock_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Prop to spawn behind on unused fire escape
 {
 	"classname" "prop_dynamic"
@@ -645,6 +684,34 @@ add:
 	"model" "models/props_junk/trashcluster01b_corner.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Van on the street outside the jazz club
+{
+	"classname" "prop_dynamic"
+	"origin" "-94 3944 -162"
+	"angles" "0 263 0"
+	"model" "models/props_vehicles/van.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-94 3944 -162"
+	"angles" "0 263 0"
+	"model" "models/props_vehicles/van_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "losfix_jazzvan1,AddOutput,mins -108 -2 -13,0,-1"
+	"OnMapSpawn" "losfix_jazzvan1,AddOutput,maxs 108 2 13,0,-1"
+	"OnMapSpawn" "losfix_jazzvan1,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-94 3942 -155"
+	"targetname" "losfix_jazzvan1"
 }
 ; --- Sign on jazz club awning
 {
@@ -682,31 +749,6 @@ add:
 	"maxs" "95.1 2.1 45.1"
 	"initialstate" "1"
 	"BlockType" "0"
-}
-; --- Planks in the room where survivors drop into the sewer
-{
-	"classname" "prop_dynamic"
-	"origin" "1006 5002 -1184"
-	"angles" "0 60 0"
-	"model" "models/props_swamp/plank001a_192.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "1215 4909 -1184"
-	"angles" "0 65 0"
-	"model" "models/props_swamp/plank001a_192.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "1409 4778 -1184"
-	"angles" "0 45 0"
-	"model" "models/props_swamp/plank001a_192.mdl"
-	"solid" "6"
-	"disableshadows" "1"
 }
 ; --- Props in the first sewer room, where survivors drop
 {
@@ -749,7 +791,92 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Props in the second sewer room, where the first gate is opened
+; --- Pipe groups with ladders in the room where survivors drop into the sewers
+{
+	"classname" "prop_dynamic"
+	"origin" "486 4497 -1136"
+	"angles" "0 270 0"
+	"model" "models/props_pipes/pipeset32d_corner128d_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "486 4369 -1096"
+	"angles" "0 270 0"
+	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "446 4497 -1136"
+	"angles" "0 270 0"
+	"model" "models/props_pipes/pipeset32d_corner128d_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "446 4369 -1096"
+	"angles" "0 270 0"
+	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-341 -487 -186"
+	"angles" "0 0 0"
+	"model" "*80"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1022 5776 -1136"
+	"angles" "0 90 0"
+	"model" "models/props_pipes/pipeset32d_corner128d_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1022 5904 -1096"
+	"angles" "0 90 0"
+	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1062 5776 -1136"
+	"angles" "0 90 0"
+	"model" "models/props_pipes/pipeset32d_corner128d_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1062 5904 -1096"
+	"angles" "0 90 0"
+	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "1848 10760 -186"
+	"angles" "0 180 0"
+	"model" "*80"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Props in the second sewer room, after the first gate
 {
 	"classname" "prop_dynamic"
 	"origin" "2352 5344 -1136"
@@ -758,152 +885,22 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Ramp before the ladder after the tunnel
 {
 	"classname" "prop_dynamic"
-	"origin" "2632 5957 -1072"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_256_001a.mdl"
+	"origin" "9565 5498 -1197"
+	"angles" "-30 0 0"
+	"model" "models/props_urban/metal_plate001.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
-	"classname" "prop_dynamic"
-	"origin" "2632 5957 -880"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2673 5957 -1072"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_256_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "2673 5957 -880"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- Props by the ladder to reach the second gate
-{
-	"classname" "prop_dynamic"
-	"origin" "4544 5400 -1072"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_256_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "4544 5400 -880"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "4544 5352 -1072"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_256_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "4544 5352 -880"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "4505 5835 -1140"
-	"angles" "0 255 0"
-	"model" "models/props_debris/barricade_tall04a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- Props in the second sewer room, after the second gate is opened
-{
-	"classname" "prop_dynamic"
-	"origin" "5739 5593 -1072"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_256_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5739 5593 -880"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5780 5593 -1072"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_256_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5780 5593 -880"
-	"angles" "90 90 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "5822 5211 -1140"
-	"angles" "0 292 0"
-	"model" "models/props_debris/barricade_tall01a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "6454 5225 -1056"
-	"angles" "-90 0 0"
-	"model" "models/props_pipes/pipeset08d_512_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "6645 5225 -1056"
-	"angles" "-90 0 0"
-	"model" "models/props_pipes/pipeset08d_512_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-; --- Props in the tunnel leading to the saferoom
-{
-	"classname" "prop_dynamic"
-	"origin" "7859 5373 -1136"
-	"angles" "90 0 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "8828 5500 -1136"
-	"angles" "90 0 0"
-	"model" "models/props_pipes/pipeset32d_128_001a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"classname" "env_physics_blocker"
+	"origin" "9623 5498 -1166"
+	"mins" "-1 -36 -2"
+	"maxs" "1 36 2"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 
 ; =====================================================
@@ -1054,6 +1051,25 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
+; --- Ladder to climb on the food cart by the cement mixer
+{
+	"classname" "func_simpleladder"
+	"origin" "286 5466 -280"
+	"angles" "0 180 5"
+	"model" "*92"
+	"normal.x" "0.00"
+	"normal.y" "-0.996194"
+	"normal.z" "0.087155"
+	"team" "0"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-384 1807 -1"
+	"angles" "5 90 0"
+	"model" "models/props/cs_assault/ladderaluminium128.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
 ; --- Infected ladder to get to the unused fire escape next to plank crossing
 {
 	"classname" "func_simpleladder"
@@ -1133,9 +1149,9 @@ add:
 ; --- Infected ladder to climb on food cart outside the jazz club
 {
 	"classname" "func_simpleladder"
-	"origin" "-2628.5 5190 -53"
-	"angles" "0 270 0"
-	"model" "*92"
+	"origin" "-281 1656 3"
+	"angles" "0 0 0"
+	"model" "*37"
 	"normal.x" "1.00"
 	"normal.y" "0.00"
 	"normal.z" "0.00"
@@ -1202,42 +1218,6 @@ add:
 ; --- Infected ladders on the walkways after the first gate in the sewer
 {
 	"classname" "func_simpleladder"
-	"origin" "3687 6222 -1128.5"
-	"angles" "0 180 0"
-	"model" "*76"
-	"normal.x" "0.00"
-	"normal.y" "1.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3073 5744 -1128"
-	"angles" "0 90 90"
-	"model" "models/props_waterfront/railing01_128.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-{
-	"classname" "func_simpleladder"
-	"origin" "2621 5189 -1174"
-	"angles" "0 0 0"
-	"model" "*76"
-	"normal.x" "0.00"
-	"normal.y" "-1.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3235 5663 -1128"
-	"angles" "0 270 90"
-	"model" "models/props_waterfront/railing01_128.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-{
-	"classname" "func_simpleladder"
 	"origin" "3133 5189 -1174"
 	"angles" "0 0 0"
 	"model" "*76"
@@ -1250,60 +1230,6 @@ add:
 	"classname" "prop_dynamic"
 	"origin" "3747 5663 -1128"
 	"angles" "0 270 90"
-	"model" "models/props_waterfront/railing01_128.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-{
-	"classname" "func_simpleladder"
-	"origin" "4583 6218 -1174"
-	"angles" "0 180 0"
-	"model" "*76"
-	"normal.x" "0.00"
-	"normal.y" "1.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "3969 5744 -1128"
-	"angles" "0 90 90"
-	"model" "models/props_waterfront/railing01_128.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-{
-	"classname" "func_simpleladder"
-	"origin" "4029 5189 -1174"
-	"angles" "0 0 0"
-	"model" "*76"
-	"normal.x" "0.00"
-	"normal.y" "-1.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "4643 5663 -1128"
-	"angles" "0 270 90"
-	"model" "models/props_waterfront/railing01_128.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-{
-	"classname" "func_simpleladder"
-	"origin" "5124 5706 -1174"
-	"angles" "0 180 0"
-	"model" "*76"
-	"normal.x" "0.00"
-	"normal.y" "1.00"
-	"normal.z" "0.00"
-	"team" "2"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "4509 5232 -1128"
-	"angles" "0 90 90"
 	"model" "models/props_waterfront/railing01_128.mdl"
 	"solid" "0"
 	"disableshadows" "1"
@@ -1503,6 +1429,54 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "barricade_path_navblock1,BlockNav,,1,-1"
+	"OnMapSpawn" "barricade_path_navblock2,BlockNav,,1,-1"
+	"OnMapSpawn" "barricade_path_navblock3,BlockNav,,1,-1"
+	"OnMapSpawn" "barricade_path_navblock4,BlockNav,,1,-1"
+	"OnMapSpawn" "barricade_path_navblock5,BlockNav,,1,-1"
+}
+{
+	"classname" "script_nav_blocker"
+	"origin" "1036 3739 -152"
+	"extent" "140 71 18"
+	"targetname" "barricade_path_navblock1"
+	"teamToBlock" "2"
+	"affectsFlow" "1"
+}
+{
+	"classname" "script_nav_blocker"
+	"origin" "1055 3816 -152"
+	"extent" "95 24 18"
+	"targetname" "barricade_path_navblock2"
+	"teamToBlock" "2"
+	"affectsFlow" "1"
+}
+{
+	"classname" "script_nav_blocker"
+	"origin" "868 3688 -152"
+	"extent" "28 24 18"
+	"targetname" "barricade_path_navblock3"
+	"teamToBlock" "2"
+	"affectsFlow" ""
+}
+{
+	"classname" "script_nav_blocker"
+	"origin" "826 3870 -152"
+	"extent" "24 24 18"
+	"targetname" "barricade_path_navblock4"
+	"teamToBlock" "2"
+	"affectsFlow" "1"
+}
+{
+	"classname" "script_nav_blocker"
+	"origin" "811 3235 22"
+	"extent" "35 35 18"
+	"targetname" "barricade_path_navblock5"
+	"teamToBlock" "2"
+	"affectsFlow" "1"
+}
 ; --- Plywood on barricades for spawns and ladder visibility
 {
 	"classname" "prop_dynamic"
@@ -1652,62 +1626,4 @@ add:
 	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
-}
-
-; =====================================================
-; ==                EVENT ROUTE REWORK               ==
-; ==    Ladder to access walkway then force a drop   ==
-; =====================================================
-add:
-; --- Ladder to access the walkway by the first gate
-{
-	"classname" "prop_dynamic"
-	"origin" "2768 5704 -1194"
-	"angles" "0 270 0"
-	"model" "models/props_vehicles/train_ladder.mdl"
-	"solid" "0"
-	"disableshadows" "1"
-}
-{
-	"classname" "func_simpleladder"
-	"origin" "-1952 376 0"
-	"angles" "0 0 0"
-	"model" "*83"
-	"normal.x" "-1.00"
-	"normal.y" "0.00"
-	"normal.z" "0.00"
-	"team" "0"
-}
-; --- Force survivors to drop near the original ladder by blocking the connecting parts of the walkway
-{
-	"classname" "prop_dynamic"
-	"origin" "4387 5564 -1006"
-	"angles" "0 120 0"
-	"model" "models/props_debris/barricade_tall02a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "4538 5700 -1006"
-	"angles" "0 215 0"
-	"model" "models/props_debris/barricade_tall03a.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4542 5698 -993"
-	"mins" "-19.5 -67.5 -73"
-	"maxs" "19.5 67.5 73"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "4391 5548 -993"
-	"mins" "-67.5 -19.5 -73"
-	"maxs" "67.5 19.5 73"
-	"initialstate" "1"
-	"BlockType" "1"
 }
