--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -51,7 +51,8 @@ add:
 }
 ; --- To fix issues with lighting on props use an info_target at the location where the prop should get its lighting from
 ; --- Add the following key value to the prop to make use of the info_target:
-; --- "lightingorigin" "[name]"
+"lightingorigin" "[name]"
+; --- Info Target
 {
 	"classname" "info_target"
 	"origin" "[x y z]"
