--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -2196,29 +2196,6 @@ modify:
 		"spawnflags" "8"
 	}
 }
-; --- Trash Cans
-{
-	match:
-	{
-		"classname" "/.*prop_physics.*/"
-		"model" "models/props_street/trashbin01.mdl"
-	}
-	replace:
-	{
-		"spawnflags" "8"
-	}
-}
-{
-	match:
-	{
-		"classname" "/.*prop_physics.*/"
-		"model" "models/props_junk/trashbin01a.mdl"
-	}
-	replace:
-	{
-		"spawnflags" "8"
-	}
-}
 
 ; =====================================================
 ; ==                JUNK PROP CLEANUP                ==
@@ -2453,10 +2430,6 @@ filter:
 {
 	"classname" "/.*prop_physics.*/"
 	"model" "models/props_interiors/table_folding.mdl"
-}
-{
-	"classname" "/.*prop_physics.*/"
-	"model" "models/props_interiors/table_motel.mdl"
 }
 {
 	"classname" "/.*prop_physics.*/"
@@ -3047,6 +3020,7 @@ modify:
 	{
 		"classname" "/.*prop_physics.*/"
 		"model" "models/props_lighting/lampbedside01.mdl"
+		"skin" "0"
 	}
 	insert:
 	{
@@ -3961,6 +3935,17 @@ modify:
 	{
 		"classname" "/.*prop_physics.*/"
 		"model" "models/props_plants/claypot03.mdl"
+	}
+	insert:
+	{
+		"spawnflags" "4"
+	}
+}
+{
+	match:
+	{
+		"classname" "/.*prop_physics.*/"
+		"model" "models/props_plants/plantairport01.mdl"
 	}
 	insert:
 	{
