--- a/cfg/stripper/maps/cdta_04onarail.cfg
+++ b/cfg/stripper/maps/cdta_04onarail.cfg
@@ -290,6 +290,17 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
+; --- Ammo pile in the trailer park
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "-6497 2353 672"
+	"angles" "0 60 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 ; --- Ammo pile in the train car before the warehouse
 {
 	"classname" "weapon_ammo_spawn"
@@ -306,6 +317,30 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
+; --- Remove 2 hittable cars in the trailer park
+filter:
+{
+	"targetname" "InstanceAuto1-car_physics"
+}
+{
+	"parentname" "InstanceAuto1-car_physics"
+}
+{
+	"targetname" "InstanceAuto2-car_physics"
+}
+{
+	"parentname" "InstanceAuto2-car_physics"
+}
+; --- Add a hittable log after the bridge
+add:
+{
+	"classname" "prop_physics"
+	"origin" "2492 2410 910"
+	"angles" "0 46 0"
+	"model" "models/props_foliage/tree_trunk_fallen.mdl"
+	"solid" "6"
+	"fadescale" "0"
+}
 ; --- Remove the forklift inside the warehouse
 filter:
 {
@@ -356,12 +391,34 @@ add:
 ; ==                  OUT OF BOUNDS                  ==
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
+add:
+; --- Block an out of bounds spot by the trailer park
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4952 -362 712"
+	"mins" "-264 -22 -80"
+	"maxs" "264 22 80"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
 ; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 add:
+; --- Block a perma-stuck spot behind a fence in the trailer park
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5168 2142 733"
+	"angles" "0 45 0"
+	"mins" "-32 -120 -56"
+	"maxs" "32 120 56"
+	"boxmins" "-32 -120 -56"
+	"boxmaxs" "32 120 56"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 ; --- Block a perma-stuck spot behind a bush by the 2 CEDA trailers
 {
 	"classname" "env_physics_blocker"
@@ -448,6 +505,51 @@ add:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
+; --- One way drop at the trailer park entrance to prevent easy tank runbacks
+{
+	"classname" "prop_dynamic"
+	"origin" "-6389 2941 639"
+	"angles" "0 0 0"
+	"model" "models/props_urban/wood_fence001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6389 3037 639"
+	"angles" "0 0 0"
+	"model" "models/props_urban/wood_fence001_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-10534.68 3435.8 183.37"
+	"angles" "0 234 -10"
+	"model" "*102"
+	"normal.x" "-0.796726"
+	"normal.y" "0.578855"
+	"normal.z" "0.173648"
+	"team" "0"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6461 2804 723"
+	"angles" "-10 144 0"
+	"model" "models/props/de_train/ladderaluminium.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-2878 4868 -488.05"
+	"angles" "0 90 0"
+	"model" "*102"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Ramp at the event drop to stop it from being a one way drop
 {
 	"classname" "prop_dynamic"
@@ -800,7 +902,7 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
-; --- Infected ladder to prevent a perma-stuck spot behind a fence in the trailer park
+; --- Infected ladders to prevent a perma-stuck spot behind a fence in the trailer park
 {
 	"classname" "func_simpleladder"
 	"origin" "-10319 -145 -483.05"
@@ -808,6 +910,16 @@ add:
 	"model" "*102"
 	"normal.x" "-1.00"
 	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-7431 6601 -449.05"
+	"angles" "0 180 0"
+	"model" "*102"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
 	"normal.z" "0.00"
 	"team" "2"
 }
