--- a/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
+++ b/cfg/stripper/maps/l4d_dbd2dc_the_mall.cfg
@@ -969,7 +969,7 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
-; --- Make the car on the bridge not prop_physics
+; --- Make the car on the bridge unhittable
 modify:
 {
 	match:
@@ -1007,14 +1007,14 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-{
-	"classname" "prop_dynamic"
-	"origin" "-1558.19 -888.203 -671.75"
-	"angles" "0 134 0"
-	"model" "models/props_junk/dumpster.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-1558.19 -888.203 -671.75"
+;	"angles" "0 134 0"
+;	"model" "models/props_junk/dumpster.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
 {
 	"classname" "prop_dynamic"
 	"origin" "805.7 1172.8 -671.75"
@@ -1023,11 +1023,34 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-180.688 247.964 -671.75"
+;	"angles" "0 110 0"
+;	"model" "models/props_junk/dumpster.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+; --- Make the wrecked car by the event unhittable
+filter:
+{
+	"hammerid" "1099329"
+}
+add:
 {
 	"classname" "prop_dynamic"
-	"origin" "-180.688 247.964 -671.75"
-	"angles" "0 110 0"
-	"model" "models/props_junk/dumpster.mdl"
+	"origin" "412.392 697.596 -667.769"
+	"angles" "-0.8817 -173.127 359.935"
+	"model" "models/props_vehicles/cara_95sedan_wrecked.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendercolor" "185 0 0"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "412.392 697.596 -667.769"
+	"angles" "-0.8817 -173.127 359.935"
+	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -1292,6 +1315,23 @@ add:
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
 add:
+; --- Block survivors from getting out of bounds over fences by the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "-4 -519 -210"
+	"mins" "-15 -261 -462"
+	"maxs" "15 261 462"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "956 616 -129"
+	"mins" "-4 -864 -393"
+	"maxs" "4 864 393"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block survivors from getting out of bounds on the roof
 {
 	"classname" "env_physics_blocker"
@@ -1885,26 +1925,6 @@ add:
 	"model" "models/props_vehicles/cara_82hatchback_wrecked_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "412 698 -666.992"
-	"angles" "0 187 0"
-	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-	"parentname" "hittable_car_red"
-}
-modify:
-{
-	match:
-	{
-		"hammerid" "1099329"
-	}
-	insert:
-	{
-		"targetname" "hittable_car_red"
-	}
 }
 ; --- Fix non-solid static props throughout the map
 add:
